# WEB-Python-HW2

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
Trio/: README.md  pyproject.toml
Trio/trio/: __init__.py  main.py
Trio/trio/AdressBook/: my_classes.py  tests.txt
Trio/trio/FolderSorter/: bot.py
trio/: __init__.py
trio/AdressBook/: bot.py  bot_testing.py  parser_oop.py  search.py
trio/NoteBook/: bot.py
