[tool.poetry]
name = "trio"
version = "0.1.0"
description = ""
authors = ["Doalina <alina.dobryshyna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.8.0"
colorama = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
